the calendar has a constants number of week. days outside the month are also visible. corrected number of days in december

--- a/less/date.less
+++ b/less/date.less
@@ -307,8 +307,12 @@ td, th {
     transition: background-color 150ms ease-in;
 }
 
-.forbidden {
+.forbidden, .date-day-outside {
     color: @color-basis-grey;
+}
+
+.date-day-outside {
+    color: @color-basis-hover;
 }
 
 .allowed:hover {
